[gd_scene load_steps=118 format=3 uid="uid://bkmx1mvtb8dxr"]

[ext_resource type="Script" path="res://Scripts/Enemy.gd" id="1_6udno"]
[ext_resource type="Texture2D" uid="uid://ps2dg61ty76w" path="res://Sprites/knight-run-sheet.png" id="2_7pnuj"]
[ext_resource type="Texture2D" uid="uid://q6dsymwdbl1c" path="res://Sprites/Bee/Bee_Death.png" id="2_phgyt"]
[ext_resource type="Texture2D" uid="uid://c4xfdnq5c38c0" path="res://Sprites/knight-death-sheet.png" id="2_q1u0q"]
[ext_resource type="Texture2D" uid="uid://cc8l7jmv24vle" path="res://Sprites/wizard-run-sheet.png" id="3_8f23o"]
[ext_resource type="Texture2D" uid="uid://pq28qkn5p8p5" path="res://Sprites/Bee/Bee_Walk.png" id="3_57hdm"]
[ext_resource type="Texture2D" uid="uid://71x34ukulwpb" path="res://Sprites/Necromancer_creativekind-Sheet.png" id="4_6nouq"]
[ext_resource type="Texture2D" uid="uid://c6sytqupcgoul" path="res://Sprites/rogue-death-sheet.png" id="4_chvat"]
[ext_resource type="Texture2D" uid="uid://b3oxns30ei64v" path="res://Sprites/wizard-death-sheet.png" id="4_mvkr8"]
[ext_resource type="Texture2D" uid="uid://1wf8llk48bgj" path="res://Sprites/rogue-run-sheet.png" id="5_kkmra"]
[ext_resource type="AudioStream" uid="uid://vioqdrtdy1x3" path="res://Sound/086398_game-die-81356.mp3" id="8_wxbp6"]
[ext_resource type="Texture2D" uid="uid://dq57saw2rnqp4" path="res://Sprites/skeleton-death-sheet.png" id="9_bol6a"]
[ext_resource type="Texture2D" uid="uid://cgfdp5afcmk7x" path="res://Sprites/skeleton-run-sheet.png" id="10_lwsou"]
[ext_resource type="AudioStream" uid="uid://dmmjjx68g3x6e" path="res://Sound/090035_splatwav-91604.mp3" id="10_o51ug"]
[ext_resource type="Texture2D" uid="uid://3lrr1x4460rt" path="res://Sprites/slime.png" id="11_077yy"]
[ext_resource type="Texture2D" uid="uid://blmls1u06ubt2" path="res://Particles/flare_01.png" id="11_irhtg"]
[ext_resource type="Texture2D" uid="uid://bu65b2r4jrqy7" path="res://Particles/smoke_01.png" id="12_5k78v"]
[ext_resource type="FontFile" uid="uid://dclfn1fjcq5i7" path="res://Fonts/PressStart2P-Regular.ttf" id="13_r0p1q"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_brpyb"]
radius = 59.0
height = 132.0

[sub_resource type="AtlasTexture" id="AtlasTexture_uxtxg"]
atlas = ExtResource("2_phgyt")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_6envg"]
atlas = ExtResource("2_phgyt")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3i72"]
atlas = ExtResource("2_phgyt")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1u5e"]
atlas = ExtResource("2_phgyt")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3ee0"]
atlas = ExtResource("3_57hdm")
region = Rect2(0, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_n1068"]
atlas = ExtResource("3_57hdm")
region = Rect2(64, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_5g12d"]
atlas = ExtResource("3_57hdm")
region = Rect2(128, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_hd86b"]
atlas = ExtResource("3_57hdm")
region = Rect2(192, 128, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv8hw"]
atlas = ExtResource("2_q1u0q")
region = Rect2(0, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5jai"]
atlas = ExtResource("2_q1u0q")
region = Rect2(48, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_073ex"]
atlas = ExtResource("2_q1u0q")
region = Rect2(96, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vhd4o"]
atlas = ExtResource("2_q1u0q")
region = Rect2(144, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jg06f"]
atlas = ExtResource("2_q1u0q")
region = Rect2(192, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbnbu"]
atlas = ExtResource("2_q1u0q")
region = Rect2(240, 0, 48, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_snv3g"]
atlas = ExtResource("2_7pnuj")
region = Rect2(64, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kwuye"]
atlas = ExtResource("2_7pnuj")
region = Rect2(0, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6fmo8"]
atlas = ExtResource("2_7pnuj")
region = Rect2(128, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1bba"]
atlas = ExtResource("2_7pnuj")
region = Rect2(192, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b4l2e"]
atlas = ExtResource("2_7pnuj")
region = Rect2(256, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ra1g"]
atlas = ExtResource("2_7pnuj")
region = Rect2(320, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6iqa"]
atlas = ExtResource("4_6nouq")
region = Rect2(0, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8wf8"]
atlas = ExtResource("4_6nouq")
region = Rect2(160, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iad0y"]
atlas = ExtResource("4_6nouq")
region = Rect2(320, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1a23n"]
atlas = ExtResource("4_6nouq")
region = Rect2(480, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0pgr6"]
atlas = ExtResource("4_6nouq")
region = Rect2(640, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ccne7"]
atlas = ExtResource("4_6nouq")
region = Rect2(800, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xiub1"]
atlas = ExtResource("4_6nouq")
region = Rect2(960, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_n0asn"]
atlas = ExtResource("4_6nouq")
region = Rect2(1120, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jnbfb"]
atlas = ExtResource("4_6nouq")
region = Rect2(1280, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kard7"]
atlas = ExtResource("4_6nouq")
region = Rect2(1440, 768, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4utkh"]
atlas = ExtResource("4_6nouq")
region = Rect2(0, 640, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlv4k"]
atlas = ExtResource("4_6nouq")
region = Rect2(160, 640, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0hv42"]
atlas = ExtResource("4_6nouq")
region = Rect2(320, 640, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdwx0"]
atlas = ExtResource("4_6nouq")
region = Rect2(480, 640, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6aem0"]
atlas = ExtResource("4_6nouq")
region = Rect2(640, 640, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_1sku5"]
atlas = ExtResource("4_6nouq")
region = Rect2(0, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ju1b3"]
atlas = ExtResource("4_6nouq")
region = Rect2(160, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcomt"]
atlas = ExtResource("4_6nouq")
region = Rect2(320, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s4p0a"]
atlas = ExtResource("4_6nouq")
region = Rect2(480, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yti3w"]
atlas = ExtResource("4_6nouq")
region = Rect2(640, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_jql6h"]
atlas = ExtResource("4_6nouq")
region = Rect2(800, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_wq2bp"]
atlas = ExtResource("4_6nouq")
region = Rect2(960, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0hpx"]
atlas = ExtResource("4_6nouq")
region = Rect2(1120, 128, 160, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vi3f0"]
atlas = ExtResource("4_chvat")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqoa1"]
atlas = ExtResource("4_chvat")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cq0my"]
atlas = ExtResource("4_chvat")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_14bfk"]
atlas = ExtResource("4_chvat")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gw4wh"]
atlas = ExtResource("4_chvat")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4wor"]
atlas = ExtResource("4_chvat")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfmxy"]
atlas = ExtResource("5_kkmra")
region = Rect2(0, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_te58b"]
atlas = ExtResource("5_kkmra")
region = Rect2(64, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kgc88"]
atlas = ExtResource("5_kkmra")
region = Rect2(128, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_io6je"]
atlas = ExtResource("5_kkmra")
region = Rect2(192, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ww42"]
atlas = ExtResource("5_kkmra")
region = Rect2(256, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oy34x"]
atlas = ExtResource("5_kkmra")
region = Rect2(320, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjmbe"]
atlas = ExtResource("9_bol6a")
region = Rect2(0, 16, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3jc14"]
atlas = ExtResource("9_bol6a")
region = Rect2(96, 16, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fu0bd"]
atlas = ExtResource("9_bol6a")
region = Rect2(192, 16, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_o57ie"]
atlas = ExtResource("9_bol6a")
region = Rect2(288, 16, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1kbn"]
atlas = ExtResource("9_bol6a")
region = Rect2(384, 16, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_34kby"]
atlas = ExtResource("9_bol6a")
region = Rect2(480, 16, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydrgf"]
atlas = ExtResource("9_bol6a")
region = Rect2(576, 16, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_e516m"]
atlas = ExtResource("9_bol6a")
region = Rect2(672, 16, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_m15bj"]
atlas = ExtResource("10_lwsou")
region = Rect2(0, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6030q"]
atlas = ExtResource("10_lwsou")
region = Rect2(64, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i1lpl"]
atlas = ExtResource("10_lwsou")
region = Rect2(128, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t5hs8"]
atlas = ExtResource("10_lwsou")
region = Rect2(192, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l87rn"]
atlas = ExtResource("10_lwsou")
region = Rect2(256, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fov3h"]
atlas = ExtResource("10_lwsou")
region = Rect2(320, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_awaxy"]
atlas = ExtResource("11_077yy")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ajbw"]
atlas = ExtResource("11_077yy")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnf1t"]
atlas = ExtResource("11_077yy")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_icjsq"]
atlas = ExtResource("11_077yy")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4gjcq"]
atlas = ExtResource("11_077yy")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8xjvi"]
atlas = ExtResource("11_077yy")
region = Rect2(160, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wbjsp"]
atlas = ExtResource("11_077yy")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgtak"]
atlas = ExtResource("11_077yy")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydkqc"]
atlas = ExtResource("11_077yy")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_queni"]
atlas = ExtResource("11_077yy")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_e1uow"]
atlas = ExtResource("11_077yy")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuelc"]
atlas = ExtResource("11_077yy")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1kss"]
atlas = ExtResource("4_mvkr8")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjeqh"]
atlas = ExtResource("4_mvkr8")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_meq5e"]
atlas = ExtResource("4_mvkr8")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k8iti"]
atlas = ExtResource("4_mvkr8")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wijsk"]
atlas = ExtResource("4_mvkr8")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j77i"]
atlas = ExtResource("4_mvkr8")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qamyj"]
atlas = ExtResource("3_8f23o")
region = Rect2(0, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k0tgb"]
atlas = ExtResource("3_8f23o")
region = Rect2(64, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mlglx"]
atlas = ExtResource("3_8f23o")
region = Rect2(128, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1fjre"]
atlas = ExtResource("3_8f23o")
region = Rect2(192, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ls88g"]
atlas = ExtResource("3_8f23o")
region = Rect2(256, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tc5i6"]
atlas = ExtResource("3_8f23o")
region = Rect2(320, 32, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4gmcv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uxtxg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6envg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3i72")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1u5e")
}, {
"duration": 1.0,
"texture": null
}],
"loop": false,
"name": &"bee-death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3ee0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n1068")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5g12d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hd86b")
}],
"loop": true,
"name": &"bee-run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv8hw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5jai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_073ex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vhd4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jg06f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbnbu")
}],
"loop": false,
"name": &"knight-death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_snv3g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kwuye")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6fmo8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1bba")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b4l2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ra1g")
}],
"loop": true,
"name": &"knight-run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6iqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8wf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iad0y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1a23n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0pgr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ccne7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xiub1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n0asn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jnbfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kard7")
}],
"loop": false,
"name": &"necromancer-death",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4utkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlv4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0hv42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdwx0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6aem0")
}],
"loop": false,
"name": &"necromancer-hit",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1sku5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ju1b3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcomt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s4p0a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yti3w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jql6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wq2bp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0hpx")
}],
"loop": true,
"name": &"necromancer-run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vi3f0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqoa1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cq0my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14bfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gw4wh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4wor")
}],
"loop": false,
"name": &"rogue-death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfmxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_te58b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kgc88")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_io6je")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ww42")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy34x")
}],
"loop": true,
"name": &"rogue-run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tjmbe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3jc14")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fu0bd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o57ie")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1kbn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34kby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydrgf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e516m")
}],
"loop": false,
"name": &"skeleton-death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_m15bj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6030q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i1lpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t5hs8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l87rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fov3h")
}],
"loop": true,
"name": &"skeleton-run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_awaxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ajbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnf1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_icjsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4gjcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8xjvi")
}],
"loop": false,
"name": &"snake-death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wbjsp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgtak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydkqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_queni")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e1uow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuelc")
}],
"loop": true,
"name": &"snake-run",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1kss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjeqh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_meq5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k8iti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wijsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j77i")
}],
"loop": false,
"name": &"wizard-death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qamyj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k0tgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mlglx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1fjre")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ls88g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tc5i6")
}],
"loop": true,
"name": &"wizard-run",
"speed": 5.0
}]

[sub_resource type="Gradient" id="Gradient_erpy6"]
offsets = PackedFloat32Array(0.461111, 1)
colors = PackedColorArray(1, 1, 0, 1, 1, 0.0392157, 0.996078, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_pyiss"]
gradient = SubResource("Gradient_erpy6")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_jvb61"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 75.0
direction = Vector3(2.08165e-12, 2.08165e-12, 0)
gravity = Vector3(2.08165e-12, 2.08165e-12, 0)
radial_accel_min = -20.0
radial_accel_max = -20.0
scale_min = 0.5
scale_max = 0.75
color_ramp = SubResource("GradientTexture1D_pyiss")
hue_variation_max = 0.75

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_e0fhh"]
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 40.0
initial_velocity_max = 5.0
gravity = Vector3(2.08165e-12, 2.08165e-12, 0)
radial_accel_min = 20.0
radial_accel_max = 20.0
scale_min = 0.25
scale_max = 0.5

[node name="Enemy" type="CharacterBody2D"]
z_index = 1
collision_layer = 0
collision_mask = 16
motion_mode = 1
script = ExtResource("1_6udno")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(2, -1)
shape = SubResource("CapsuleShape2D_brpyb")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_4gmcv")
animation = &"snake-death"
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"source": "res://Shark.aseprite"
}

[node name="SpawnParticles" type="GPUParticles2D" parent="."]
process_material = SubResource("ParticleProcessMaterial_jvb61")
texture = ExtResource("11_irhtg")
speed_scale = 2.0
fixed_fps = 0
draw_order = 0

[node name="DeathParticles" type="GPUParticles2D" parent="."]
emitting = false
process_material = SubResource("ParticleProcessMaterial_e0fhh")
texture = ExtResource("12_5k78v")
fixed_fps = 0
draw_order = 0

[node name="StateTimer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="SpawnOutwardsTimer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="DeathParticlesTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="TrapTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="FlashHitTimer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_wxbp6")
bus = &"Effects"

[node name="AudioStreamPlayerFishSplat" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_o51ug")
bus = &"Effects"

[node name="ScoreLabel" type="Label" parent="."]
visible = false
offset_left = -348.0
offset_top = -100.0
offset_right = 361.0
offset_bottom = -65.0
theme_override_fonts/font = ExtResource("13_r0p1q")
theme_override_font_sizes/font_size = 32
text = "POWER UP!"
horizontal_alignment = 1
